# trpg-to-novel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test.md  ~$记录（完整版）.docx  对话记录.md  开始.md  样本1.docx  样本1.md  样本1.txt  样本2.docx  样本2.md  样本2.txt  跑团记录（完整版）.docx
data/campaigns/jl_zheng_zheng/: campaign.yaml  players.yaml  story_state.yaml  worldview.md
data/style_recipes/: heroic_fantasy_drama.yaml
data/systems/dnd5e/: card_form_schema.yaml  worldview_template.yaml
doc/: CLAUDE.md  DECISIONS.md  DESIGN.md  PROGRESS.md
legacy/: app.py
scripts/: inspect_parsed.py  migrate_v1_to_v2.py  migrate_v2_to_v3.py
src/trpg2novel/: __init__.py  campaign.py  config.py  pipeline.py  session_loader.py  worldview.py
src/trpg2novel/chapterize/: __init__.py  anchors.py  candidates.py  llm_judge.py  runner.py  schema.py  writer.py
src/trpg2novel/character/: __init__.py  card_loader.py  traits_gen.py
src/trpg2novel/llm/: __init__.py  client.py
src/trpg2novel/narrate/: __init__.py  align.py  chapter.py  polish.py  (+3 more)
tests/: test_card_loader.py  test_chapterize_runner.py  test_classify.py  test_md_loader.py  test_outline_rollback.py  test_polish_style_query.py  test_rag_chunker.py  test_rag_store.py  test_scene_segment.py  test_session_loader.py  test_session_splitter.py  test_skeleton_incremental.py  test_story_state.py  test_ui_chapter_flow.py
ui/: app.py  jobs.py  shared.py  theme.css
ui/pages/: __init__.py  campaigns.py  cards.py  consistency.py  dashboard.py  kb.py  llm_config.py  outline.py  pipeline.py  polish.py  review.py  style_kb.py  worldview.py
(+89 files in other folders)
