[project]
name = "trpg-to-novel"
version = "0.1.0"
description = "把 TRPG 跑团日志整理成连贯小说的多环节 pipeline（脚本 + 多 LLM + 人在参与）"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "streamlit>=1.36",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
trpg2novel = "trpg2novel.pipeline:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
